# mtga-deckstats

./: .gitignore  Dockerfile  TODO.md  Taskfile.yaml  docker-entrypoint.sh  pyproject.toml  wsgi.py
.infra/: playbook.yaml
.infra/templates/: domain.conf.j2
mtgdeckstats/: __init__.py  app.py  main.py  mtgdb.py  mtgrepo.py  stats.py
mtgdeckstats/templates/: base.html  main.html
