[tool.poetry]
name = "mtgdeckstats"
version = "0.1.0"
description = ""
authors = ["mogui <mogui83@gmail.com>"]
readme = "README.md"
packages = [{include = "mtgdeckstats"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
gunicorn = "^20.1.0"
loguru = "^0.6.0"
requests = "^2.28.2"
munch = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
